--- a/README.org
+++ b/README.org
@@ -66,7 +66,7 @@ Please note: you should use Java 17 or below in order to avoid problems running 
 - Agg.list and Agg.set for building indices
 - Query composition with Path API
 
-### V2: Frontier Expansion
+*** V2: Frontier Expansion
 **Goal**: Add snapshotting, frontier expansion, link expansion.
 
 **New topology**: FrontierExpansionTopology
